<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5D6DF"
    tools:context=".HomePage">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="409dp"
        android:layout_height="900dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#E23A4CA3"
        app:cardCornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/lms"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="40dp"
            android:text="@string/lms"
            android:textColor="#ECE1E1"
            android:textSize="24sp"
            app:backgroundTint="#080D3C"
            app:cornerRadius="@dimen/_20sdp"
            app:icon="@drawable/lms"
            app:iconGravity="textTop"
            app:iconSize="@dimen/_120sdp"
            app:iconTint="#EFE7E7"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/sports"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="150dp"
            android:layout_marginBottom="40dp"
            android:text="@string/sports"
            android:textColor="#F1EAEA"
            android:textSize="24sp"
            app:backgroundTint="#080D3C"
            app:cornerRadius="@dimen/_20sdp"
            app:icon="@drawable/ic_baseline_sports_basketball_24"
            app:iconGravity="textTop"
            app:iconSize="@dimen/_120sdp"
            app:iconTint="#F6F0F0"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/clubs"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="28dp"
            android:text="@string/clubs_and_societies"
            android:textColor="#F6F0F0"
            android:textSize="20sp"
            app:backgroundTint="#080D3C"
            app:cornerRadius="@dimen/_20sdp"
            app:icon="@drawable/clubs"
            app:iconGravity="textTop"
            app:iconSize="@dimen/_120sdp"
            app:iconTint="#EFE9E9" />

        <Button
            android:id="@+id/map"
            android:layout_width="150dp"
            android:layout_height="259dp"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="150dp"
            android:layout_marginBottom="28dp"
            android:text="@string/location"
            android:textColor="#F1E9E9"
            android:textSize="20sp"
            app:backgroundTint="#080D3C"
            app:cornerRadius="20dp"
            app:icon="@drawable/map"
            app:iconGravity="textTop"
            app:iconSize="@dimen/_120sdp"
            app:iconTint="#ECE2E2"
            tools:ignore="MissingConstraints" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="238dp"
        android:layout_height="74dp"
        android:orientation="vertical"
        android:text="@string/dashboard"
        android:textColor="#313177"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="33dp" />

    <Button
        android:id="@+id/profile"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        app:cornerRadius="30dp"
        app:icon="@drawable/account"
        app:iconSize="45dp"
        app:iconTint="#F3EDED"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="DuplicateIds,MissingConstraints,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
